# shortalyst

./: LICENSE  README.md  compilation_benchmarking.ipynb  data_col_script.py  parse_shor_log.py  pyproject.toml
data/: catalyst_data_not_optimized.npy  catalyst_data_optimized.npy  pennylane_data_not_optimized.npy  pennylane_data_optimized.npy  shor_stats_11.csv
shortalyst/: modexpo.py  shors_algorithm.py  shors_algorithm_no_optims.py  utils.py
tests/: test_modexpo.py  test_shor.py  test_utils.py
